more features, enhancments, Palantir Format update