@@ -192,7 +192,9 @@
                 <version>3.14.1</version>
                 <configuration>
                     <release>25</release>
-
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -201,6 +203,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
 
             <!-- Exec plugin for running CLI -->
@@ -258,7 +263,7 @@
                             <include>src/test/java/**/*.java</include>
                         </includes>
                         <palantirJavaFormat>
-                            <version>2.71.0</version>
+                            <version>2.84.0</version>
                         </palantirJavaFormat>
                         <removeUnusedImports />
                         <trimTrailingWhitespace />
